# PyautoguiVersaoFinal

./: 20Setembro.xlsx  20SetembroAtualizada.xlsx  20Setembro_1.xlsx  ESTORNOATUALIZADA.xlsx  ESTORNONOVO.xlsx  Janeiro.xlsx  Janeiro_Atualizado.xlsx  NOV1.xlsx  NOV2.xlsx  OUT.xlsx  ago.xlsx  ago300.xlsx  ago750.xlsx  agoAtualizada.xlsx  agoNova.xlsx  app.py  dezembro.xlsx  estornos.xlsx  janeiro.xlsx  janeiro11.20.xlsx  nov.xlsx  out.260.xlsx  out.alfa.xlsx  out.xlsx  out1.21.150.xlsx  out1.21.200.xlsx  out1.21.220.xlsx  out1.21.235.xlsx  out1.21.250.xlsx  out1.21.atualizada.xlsx  out1.21.xlsx  out1.21Atualizada.xlsx  out10.xlsx  out2.xlsx  out252.xlsx  out300.xlsx  out400.xlsx  out451.xlsx  out500.xlsx  outNova.xlsx  (+8 more)
Suspenso/: OUT.xlsx  OUT1.xlsx  OUT2.xlsx  suspenso.py
novo_ambiente/: pyvenv.cfg
novo_ambiente/Scripts/: activate  activate.bat
