[project]
name = "pyautogui-vm"
version = "0.1.0"
description = ""
authors = [
    {name = "Pringles",email = "pedroworkpartner@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pyautogui"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
