[project]
name = "pyautogui-vm"
version = "0.1.0"
description = ""
authors = [
    {name = "Pringles",email = "pedroworkpartner@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.27.1,<5.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]

[tool.poetry]
packages = [{include = "pyautogui"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
